`Refactored CollectionReport.js to add chit type and payment status filters, and updated UI to reflect changes`

--- a/src/App.css
+++ b/src/App.css
@@ -224,7 +224,7 @@ input:focus {
 }
 
 .main {
- background:#3b282966!important;
+ background:#eddcdc!important;
   padding-top: 65px;
   border-radius: 10px;
   padding: 20px;
