--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,73 +1,75 @@
-/* Dashboard.css */
-.counter-card {
-  animation: fadeInUp 0.8s ease;
-  transition: transform 0.3s;
+/* PieChartTooltip.css */
+
+.pie-tooltip-container {
+    padding: 8px 12px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1);
 }
 
-.counter-card:hover {
-  transform: scale(1.05);
+.pie-tooltip-title {
+    font-weight: bold;
+    font-size: 0.875rem; 
 }
 
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.pie-tooltip-value {
+    font-weight: bold;
 }
 
-.marquee-container {
-  overflow: hidden;
-  white-space: nowrap;
-  position: relative;
-  /* background: #f7f7f7; */
-  padding: 5px;
-  border-radius: 5px;
-}
 
-.marquee-text {
-  display: inline-block;
-  animation: marquee 15s linear infinite;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
-/* --- Styles for Rows >= 12 Months (Red/Pink - Highest Urgency) --- */
-.row-red,
-.row-red td {
-    background-color: #e5e5e5 !important; 
+.dashboard-page-title {
+    margin-bottom: 20px; 
+    font-weight: bold;
+    color: #2b2525;
+    text-transform: uppercase;
    
-    border-color: #e5e5e5 !important; 
 }
 
-.row-orange,
-.row-orange td {
-
-    background-color: #fff3cd !important; 
-    border-color: #ffeeba !important;
+.dashboard-page-container {
+    min-height: 100vh;
+    background-color: #e9e9e9;
+    padding-top: 32px; 
+    padding-bottom: 32px;
 }
 
 
-.row-yellow,
-.row-yellow td {
-    /* Very light yellow background */
-    background-color: #fffceb !important; 
-    border-color: #fff9e6 !important;
+.chart-card {
+    height: 400px;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 
+                0px 6px 10px 0px rgba(0,0,0,0.14), 
+                0px 1px 18px 0px rgba(0,0,0,0.12); 
+    border-radius: 4px; 
+    padding: 16px; 
 }
 
-.row-blue,
-.row-blue td,
-.row-yellowtest, 
-.row-yellowtest td {
-    background-color: #d4edda !important; 
-    border-color: #c3e6cb !important;
+.card-header-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px; 
+}
+
+
+.flex-center-80-height {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+}
+
+
+.card-content-center-300 {
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    height: 300px;          
+}
+
+.flex-column-center-full-height {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;    
+    justify-content: center; 
+    height: 100%;        
 }
